# ffmpeg-kit

./: .gitignore  CHANGELOG.md  OAT.xml  README.md  package-lock.json  package.json
doc/: README.md  build.sh
doc/Buildtools/: README.md  SHA512SUM
doc/community/: README.md
doc/community/googletest-release-1.11.0/: HPKBUILD  SHA512SUM
doc/docker/: Dockerfile  README.md
doc/main/FFmpeg/: HPKBUILD  SHA512SUM
doc/main/brotli/: HPKBUILD
doc/main/bzip2/: HPKBUILD
doc/main/chromaprint/: HPKBUILD
doc/main/dav1d/: HPKBUILD  SHA512SUM  arm64-v8a-cross-file.txt  armeabi-v7a-cross-file.txt
doc/main/ffmpeg-kit/: HPKBUILD  README.md  SHA512SUM  ffmpeg-kit_oh_pkg_react.native.v6.0.2.patch
doc/main/fftw3/: HPKBUILD
doc/main/fontconfig/: HPKBUILD  SHA512SUM
doc/main/freetype2/: HPKBUILD
doc/main/fribidi/: HPKBUILD  SHA512SUM
doc/main/glib/: HPKBUILD
doc/main/gmp/: HPKBUILD
doc/main/gnutls/: HPKBUILD  SHA512SUM
doc/main/googletest/: HPKBUILD  SHA512SUM
doc/main/harfbuzz/: HPKBUILD  SHA512SUM
doc/main/json-c/: HPKBUILD  SHA512SUM
doc/main/kissfft/: HPKBUILD  SHA512SUM  kissfft_oh_pkg.patch
doc/main/lame/: HPKBUILD
doc/main/libass/: HPKBUILD  SHA512SUM
doc/main/libidn2/: HPKBUILD  SHA512SUM
doc/main/libogg/: HPKBUILD  SHA512SUM
doc/main/libpng/: HPKBUILD
doc/main/libtasn1/: HPKBUILD  SHA512SUM
doc/main/libunibreak/: HPKBUILD  SHA512SUM  libunibreak_oh_test.patch
doc/main/libvorbis/: HPKBUILD  SHA512SUM
doc/main/libvpx/: HPKBUILD  SHA512SUM  libvpx_oh_pkg.patch
doc/main/libxml2/: HPKBUILD  SHA512SUM
doc/main/nettle/: HPKBUILD
doc/main/openmp/: HPKBUILD  SHA512SUM  openmp_oh_pkg.patch
doc/main/rapidjson/: HPKBUILD  rapidjson_oh_test.patch
doc/main/vid.stab/: HPKBUILD  SHA512SUM  vid.stab_oh_pkg.patch
doc/main/x264/: HPKBUILD
doc/main/x265/: HPKBUILD  x265_4.1_oh_pkg.patch
doc/main/xvidcore/: HPKBUILD  SHA512SUM
doc/main/xz/: HPKBUILD  SHA512SUM
doc/main/zlib/: HPKBUILD  SHA512SUM
doc/script/: build_hpk.sh  envset.sh
harmony/: ffmpeg_kit.har
harmony/ffmpeg_kit/: BuildProfile.ets  index.ets  oh-package-lock.json5  oh-package.json5  ts.ts
harmony/ffmpeg_kit/src/main/: module.json5
harmony/ffmpeg_kit/src/main/cpp/: CMakeLists.txt  FFmpegKitPackage.h  RNFFmpegKitModule.cpp  RNFFmpegKitModule.h  RnohReactNativeHarmonyFFmpegKitPackage.cpp  RnohReactNativeHarmonyFFmpegKitPackage.h  ThreadPool.cpp  ThreadPool.h
harmony/ffmpeg_kit/src/main/ets/: FFmpegKitPackage.ets  FFmpegKitPackage.ts  RNFFmpegKitModule.ts
harmony/ffmpeg_kit/src/main/ets/namespace/: RNFFmpegKitModule.ts  ts.ts
src/: NativeFFmpegKitModule.ts  index.js
